# effective_xgboost_book

./: kn.ipynb  pyproject.toml  xg_helpers.py  xgbcode.ipynb
img/: stump_xg.dot
