[tool.poetry]
name = "effective-xgboost-book"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
xgboost = "^2.1.0"
scikit-learn = "^1.5.1"
numpy = "^2.0.0"
feature-engine = "^1.8.0"
ipykernel = "^6.29.5"
jinja2 = "^3.1.4"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
graphviz = "^0.20.3"
dtreeviz = "^2.2.2"
yellowbrick = "^1.5"
mljar-scikit-plot = "^0.3.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
